# animated-invention

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: app.py  config.py
app/application/: __init__.py
app/application/services/: __init__.py  permission_service.py
app/common/: date.py  list.py  pagination.py
app/domain/: __init__.py  unit_of_work.py
app/domain/entities/: __init__.py  health.py
app/domain/repositories/: __init__.py  health_repository.py  intern_repository.py  media_repository.py  mentor_repository.py  request_repository.py  unit_repository.py
app/infrastructure/: __init__.py  unit_of_work.py
app/infrastructure/builders/: base.py  base_stats.py  intern_filters.py  intern_snapshot_builder.py  intern_stats_builder.py  mentor_filters.py  request_filters.py
app/infrastructure/clients/: media_client_protocol.py  s3_client.py  s3_client_mock.py
app/migrations/: env.py
app/presentation/: __init__.py  auth_backend.py  http_bearer_transport.py
tests/: conftest.py
tests/auth/: conftest.py  test_oauth_login.py  test_oauth_register.py
tests/employees/: conftest.py  test_remove_avatar.py  test_upload_avatar.py
tests/factories/: auth.py  base.py  intern.py  mentor.py  request.py  unit.py
tests/interns/: conftest.py  test_create_intern.py  test_get_intern.py  test_intern_stats.py  test_list_interns_filters.py  test_reassign_mentor.py  test_update_intern.py
tests/mentors/: conftest.py  test_archive_mentor.py  test_create_mentor.py  test_get_current_mentor.py  test_get_mentor.py  test_list_mentors_filters.py  test_recover_mentor.py  test_update_mentor.py
tests/requests/: conftest.py  test_create_request.py  test_get_request.py  test_list_requests.py  test_update_request.py  test_update_request_self.py
tests/units/: test_get_units.py
(+101 files in other folders)
